# openfactory-apps

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: api-app.yml  cnc-hmi-app.yml  grafana-connector.yml  monitor-app.yml
apps/api/: Dockerfile  app_api.yml
apps/api/src/: app.py  endpoints.py  main.py  models.py
apps/grafana_connector/: Dockerfile  README.md  app_grafana_connector.yml
apps/grafana_connector/src/: app.py
apps/hmi/: .dockerignore  Dockerfile  app_cnc_hmi.yml  requirements.txt
apps/hmi/debug/: dev_prover.yml  prover.xml
apps/hmi/src/: .dockerignore  Dockerfile  README.md  config.py  db.py  docker-compose.yml  hmi.py  requirements.txt
apps/hmi/src/app/: conditions_stream.py  error_stream.py  state_stream.py
apps/hmi/src/app/admin/: __init__.py  cncsettings.py
apps/hmi/src/app/auth/: __init__.py  routes.py
apps/hmi/src/app/auth/models/: users.py
apps/hmi/src/app/auth/views/: useradmin.py
apps/hmi/src/app/cnc/: __init__.py  core.py  routes.py
apps/hmi/src/app/core/: hal.py  send_cmd.py
apps/hmi/src/app/file_manager/: __init__.py  routes.py
apps/hmi/src/app/main/: __init__.py  routes.py
apps/hmi/src/app/main/templates/: base.html  footer.html  (+1 more)
apps/hmi/src/app/settings/: __init__.py  routes.py
apps/hmi/src/models/: cncsettings.py
apps/monitor/: Dockerfile  app_monitor.yml  monitor_rules.yml  requirements.txt
apps/monitor/src/: app.py  metrics.py  opcua.py  shdr.py
grafana/: docker-compose.yml
grafana/provisioning/dashboards/: openfactory.json
(+25 files in other folders)
