[project]
name = "openfactory-apps"
version = "0.6.0"
description = "Collection of OpenFactory Apps"
requires-python = ">=3.12"
dependencies = ["OpenFactory @ git+https://github.com/openfactoryio/openfactory-core.git@main"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "tomlkit",
    "flask",
    "fastapi",
    "asyncua",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["apps", "apps.*"] }
